# QtPathEditor

./: .gitignore  CMakeLists.txt  LICENSE  QtPathEditor.pro  README.md  buildMsvc12.bat  buildMsvc14.bat  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathreader.cpp
app/: CMakeLists.txt  editpathdialog.cpp  editpathdialog.h  editpathdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: compilerDefinitions.cmake  compilerOptions.cmake  findDependencies.cmake  options.cmake  printInfo.cmake  versions.cmake
doc/models/: ConfigFile.qmodel
resources/: icons.qrc
src/: CMakeLists.txt  config_file.cpp  config_file.h  pathreader.cpp  pathreader.h  string_functions.cpp  string_functions.h  types.h
tests/: CMakeLists.txt  test_unitary.cpp
tests/unitary/: CMakeLists.txt  test_config_file.cpp  test_path_reader.cpp  test_string_functions.cpp
